--- a/client/pom.xml
+++ b/client/pom.xml
@@ -28,11 +28,21 @@
             <version>12.0.1</version>
         </dependency>
 	    <dependency>
-	      <groupId>com.google.code.gson</groupId>
-	      <artifactId>Gson</artifactId>
-	      <version>2.8.5</version>
-	      <scope>compile</scope>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>Gson</artifactId>
+		    <version>2.8.5</version>
+		    <scope>compile</scope>
 	    </dependency>
+	    <dependency>
+		    <groupId>org.glassfish.jersey.core</groupId>
+		    <artifactId>jersey-client</artifactId>
+		    <version>2.28</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.glassfish.jersey.inject</groupId>
+		    <artifactId>jersey-hk2</artifactId>
+		    <version>2.28</version>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
